--- a/index.html
+++ b/index.html
@@ -4,46 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome - Nuru</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
-      <div class="nav-left">
-        <a href="login.html" class="logo"
-          ><img src="img/Nuru.png" alt="logo for website"
-        /></a>
-      </div>
       <div class="nav-mid">
         <ul>
           <li>
-            <a href="feed_home.html"
-              ><img src="img/house.png" alt="" /><span>Home</span></a
-            >
+            <a href="feed_home.html"> <span><i class="fa-solid fa-home"></i> Home </span></a>
           </li>
           <li>
-            <a href="#"
-              ><img src="img/handshake.png" alt="" /><span
-                >Relationships</span
-              ></a
-            >
+            <a href="#"> <span><i class="fa-solid fa-handshake"></i> Relationships</span></a>
           </li>
           <li>
-            <a href="messages.html"
-              ><img src="img/social-communication-disorder.png" alt="" /><span
-                >Messages</span
-              ></a
-            >
+            <a href="messages.html"> <span><i class="fa-solid fa-inbox"></i> Messages </span></a>
           </li>
           <li>
-            <a href="notifications.html"
-              ><img src="img/bell.png" alt="" /><span>Notifications</span></a
-            >
+            <a href="notifications.html"> <span><i class="fa-solid fa-bell"></i> Notifications </span></a>
           </li>
-          <!-- <li><a href="feed_home.html"><img src="img/home.png" alt=""><span>Home</span></a></li> -->
         </ul>
       </div>
-      <div class="nav-right">
-        <a href="profile.html"><img src="img/user.png" class="nav-propic" /></a>
-      </div>
     </nav> 
+    <section id="intro">
+      <div class="card hero">
+        <img src="#"  width="512" height="512">
+        <div class="content">
+          <small>Where Art finds it's people</small>
+          <h1>NURU</h1>
+          <small>
+            <a href="#">
+              <i class="fa-solid fa-lightbulb neon"></i>
+              Find your light
+            </a>
+          </small>
+        </div>
+      </div>
+    </section>
+    <section id="about"> </section>
+    <section id="features"></section>
 </body>
 </html>
