--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           </li>
         </ul>
       </div>
+      <div class="login">
+        <a href="#">Login</a>
+      </div>
     </nav> 
     <section id="intro">
       <div class="card hero">
@@ -40,7 +43,32 @@
         </div>
       </div>
     </section>
-    <section id="about"> </section>
-    <section id="features"></section>
+    <hr>
+    <section id="features">
+        <h1>Features</h1>
+        <div class="feature">
+        <div class="info-card">
+          <h2>Profile</h2>
+            <img src="profile.png" alt="">
+          <p>User's can create a captivating
+          profile that includes their bio, profile picture, cover photo, links to their other social media accounts,
+          and a portfolio showcasing their work</p>
+        </div>
+        <div class="info-card">
+          <h2>Messages </h2>
+            <img src="message.png" alt="">
+          <p>User's can create a captivating
+          profile that includes their bio, profile picture, cover photo, links to their other social media accounts,
+          and a portfolio showcasing their work</p>
+        </div>
+        <div class="info-card">
+          <h2>Feed</h2>
+            <img src="feed.png" alt="">
+          <p>User's can create a captivating
+          profile that includes their bio, profile picture, cover photo, links to their other social media accounts,
+          and a portfolio showcasing their work</p>
+        </div>
+      </div> 
+    </section>
 </body>
 </html>
