--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
         </div>
       </div>
     </section>
-    <section id="about"> </section>
+    <section id="about-container">
+      <div class="about">
+        <h1>About Nuru</h1>
+        <div class="about-content">
+          <img src="https://images.nappy.co/uploads/large/7z8a0106-21595609419c44b9jawyk6qzozbrunfsyulvdl71o5hfwbl1sexxcrsqf6wvdezzm1deuxhexgqcdolb6rzfwtwto0nljalroyuiwmcmxcwfcma.jpg?auto=format&w=1280&q=75" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, non quasi sit provident id sed reiciendis ipsa earum sint a blanditiis, eligendi perferendis voluptates qui nulla voluptatem. Quo quos doloremque natus nihil sequi temporibus magnam iste hic dolorum odit optio ipsam praesentium impedit corrupti incidunt asperiores, iure tempore aperiam molestias eligendi. Illum officiis nam dicta blanditiis aut dignissimos error, temporibus deserunt saepe animi porro nobis labore quidem ratione ducimus, nemo dolorem magnam id maxime perferendis voluptatum! Excepturi, magni ex corrupti dolores consequuntur aspernatur voluptas! Quas enim delectus dolorum perferendis molestias dolores, cumque maiores necessitatibus ipsam odit modi officia excepturi voluptates.</p>
+        </div>
+      </div>
+    </section>
     <section id="features"></section>
-</body>
+</body>g
 </html>
