about section and intro section centered

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome - Nuru</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav class="navbar">
@@ -43,7 +44,7 @@
         </div>
       </div>
     </section>
-    <hr>
+    <!-- <hr> -->
     <section id="features">
         <h1>Features</h1>
         <div class="feature">
@@ -70,27 +71,43 @@
         </div>
       </div> 
     </section>
-    <hr>
+    <!-- <hr> -->
     <section id="about-container">
       <div class="about">
         <h1>About Nuru</h1>
         <div class="about-content">
           <img src="https://images.nappy.co/uploads/large/7z8a0106-21595609419c44b9jawyk6qzozbrunfsyulvdl71o5hfwbl1sexxcrsqf6wvdezzm1deuxhexgqcdolb6rzfwtwto0nljalroyuiwmcmxcwfcma.jpg?auto=format&w=1280&q=75" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, non quasi sit provident id sed reiciendis ipsa earum sint a blanditiis, eligendi perferendis voluptates qui nulla voluptatem. Quo quos doloremque natus nihil sequi temporibus magnam iste hic dolorum odit optio ipsam praesentium impedit corrupti incidunt asperiores, iure tempore aperiam molestias eligendi. Illum officiis nam dicta blanditiis aut dignissimos error, temporibus deserunt saepe animi porro nobis labore quidem ratione ducimus, nemo dolorem magnam id maxime perferendis voluptatum! Excepturi, magni ex corrupti dolores consequuntur aspernatur voluptas! Quas enim delectus dolorum perferendis molestias dolores, cumque maiores necessitatibus ipsam odit modi officia excepturi voluptates.</p>
+          <p>Art is a vital part of what makes us human. We all depend on it for entertainment and for reflection on an individual and a global level. Despite that, it continues to be challenging for artists to make a living consistently.
+
+            Nuru looks to help solve that issue by creating a platform for artists to find their audience and build and maintain networks online to help them find more consistent gigs and monetize their following more effectively. </p>
         </div>
       </div>
-      <div class="team">
+      <div class="team-container">
         <div class="team-card">
-          <img src="" alt="">
+          <div class="img-area">
+            <img src="img/tha.jpeg" alt="">
+          </div>
           <h3>Thembi Makamu</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
+          <span>
+            <i class="fa fa-github-alt" aria-hidden="true"></i>
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+          </span>
         </div>
-        <div class="team-card">
-          <img src="img/tha.jpeg" alt="">
-          <h3>Thabiso Ngwenya</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
-          <span><img src="" alt=""><img src="" alt=""><img src="" alt=""></span>
-        </div>
+          <div class="team-card">
+            <div class="img-area">
+              <img src="img/tha.jpeg" alt="">
+            </div>
+            <h3>Thabiso Ngwenya</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
+            <span>
+              <i class="fa fa-github-alt" aria-hidden="true"></i>
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </span>
+          </div>
+      </div>
       </div>
     </section>
 </body>
