--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav> 
     <section id="intro">
       <div class="card hero">
-        <img src="#"  width="512" height="512">
+        <img src="Nuru.png"  width="512" height="512">
         <div class="content">
           <small>Where Art finds it's people</small>
           <h1>NURU</h1>
@@ -58,9 +58,10 @@
         <div class="info-card">
           <h2>Messages </h2>
             <img src="message.png" alt="">
-          <p>User's can create a captivating
-          profile that includes their bio, profile picture, cover photo, links to their other social media accounts,
-          and a portfolio showcasing their work</p>
+          <p>
+            User can build connections with fellow artists or their favourite artists. The private messages allows for
+            easy communitication and collaboration
+          </p>
         </div>
         <div class="info-card">
           <h2>Feed</h2>
