--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           <h3>Thembi Makamu</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
           <span>
-            <i class="fa fa-github-alt" aria-hidden="true"></i>
-            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <i class="fa-brands fa-github-alt" aria-hidden="true"></i>
+            <i class="fa-brands fa-linkedin-square" aria-hidden="true"></i>
+            <i class="fa-brands fa-twitter" aria-hidden="true"></i>
           </span>
         </div>
           <div class="team-card">
@@ -103,9 +103,9 @@
             <h3>Thabiso Ngwenya</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
             <span>
-              <i class="fa fa-github-alt" aria-hidden="true"></i>
-              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <i class="fa-brands fa-github-alt" aria-hidden="true"></i>
+              <i class="fa-brands fa-linkedin-square" aria-hidden="true"></i>
+              <i class="fa-brands fa-twitter" aria-hidden="true"></i>
             </span>
           </div>
       </div>
