--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </nav> 
     <section id="intro">
-      <div class="card hero">
+      <div class="card">
         <img src="#"  width="512" height="512">
         <div class="content">
           <small>Where Art finds it's people</small>
@@ -85,7 +85,7 @@
       <div class="team-container">
         <div class="team-card">
           <div class="img-area">
-            <img src="img/tha.jpeg" alt="">
+            <img src="img/photo_2024-07-19_22-29-51.jpg" alt="">
           </div>
           <h3>Thembi Makamu</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
@@ -110,5 +110,70 @@
       </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="foot-container">
+        <div class="row">
+          <div class="col">
+            <h4>Nuru</h4>
+            <ul>
+              <li>
+                <a href="#">about us</a>
+              </li>
+              <li>
+                <a href="#">services</a>
+              </li>
+              <li>
+                <a href="#">privacy policy</a>
+              </li>
+              <li>
+                <a href="#">pricing</a>
+              </li>
+            </ul>
+          </div>
+          <!-- <div class="col">
+            
+            <ul>
+              <li>
+                <a href="#">about us</a>
+              </li>
+              <li>
+                <a href="#">services</a>
+              </li>
+              <li>
+                <a href="#">privacy policy</a>
+              </li>
+              <li>
+                <a href="#">pricing</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col">
+            
+            <ul>
+              <li>
+                <a href="#">about us</a>
+              </li>
+              <li>
+                <a href="#">services</a>
+              </li>
+              <li>
+                <a href="#">privacy policy</a>
+              </li>
+              <li>
+                <a href="#">pricing</a>
+              </li>
+            </ul>
+          </div> -->
+          <div class="footer-social">
+            <h4>social media links</h4>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter-f"></i></a>
+            <a href="#"><i class="fab fa-instagram-f"></i></a>
+            <a href="#"><i class="fab fa-linkenin-im"></i></a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
