--- a/index.html
+++ b/index.html
@@ -83,31 +83,35 @@
             Nuru looks to help solve that issue by creating a platform for artists to find their audience and build and maintain networks online to help them find more consistent gigs and monetize their following more effectively. </p>
         </div>
       </div>
-      <div class="team-container">
-        <div class="team-card">
-          <div class="img-area">
-            <img src="img/photo_2024-07-19_22-29-51.jpg" alt="">
-          </div>
-          <h3>Thembi Makamu</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
-          <span>
-            <i class="fa-brands fa-github-alt" aria-hidden="true"></i>
-            <i class="fa-brands fa-linkedin-square" aria-hidden="true"></i>
-            <i class="fa-brands fa-twitter" aria-hidden="true"></i>
-          </span>
-        </div>
+      <div>
+        <h2>Meet the team</h2>
+        <div class="card-container">
           <div class="team-card">
             <div class="img-area">
-              <img src="img/tha.jpeg" alt="">
+              <img src="img/photo_2024-07-19_22-29-51.jpg" alt="">
             </div>
-            <h3>Thabiso Ngwenya</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p>
+            <h3>Thembi Makamu</h3>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p> -->
             <span>
               <i class="fa-brands fa-github-alt" aria-hidden="true"></i>
               <i class="fa-brands fa-linkedin-square" aria-hidden="true"></i>
               <i class="fa-brands fa-twitter" aria-hidden="true"></i>
             </span>
           </div>
+            <div class="team-card">
+              <div class="img-area">
+                <img src="img/tha.jpeg" alt="">
+              </div>
+              <h3>Thabiso Ngwenya</h3>
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate similique fuga iure molestias incidunt minus sed, pariatur dolore dolorem quia quos, natus consectetur eius quam. Adipisci accusamus vero deleniti fuga quisquam nisi voluptate, soluta ex magnam molestiae nobis repudiandae dolorem tempora fugiat quidem a consequuntur? Recusandae in ipsa porro sint?</p> -->
+              <span>
+                <i class="fa-brands fa-github-alt" aria-hidden="true"></i>
+                <i class="fa-brands fa-linkedin-square" aria-hidden="true"></i>
+                <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+              </span>
+            </div>
+        </div>
+
       </div>
       </div>
     </section>
