--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
       <div class="login">
-        <a href="#">Login</a>
+        <a href="127.0.0.1:5500">Login</a>
       </div>
     </nav> 
     <section id="intro">
@@ -36,7 +36,7 @@
           <small>Where Art finds it's people</small>
           <h1>NURU</h1>
           <small>
-            <a href="#">
+            <a href="">
               <i class="fa-solid fa-lightbulb neon"></i>
               Find your light
             </a>
