--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav> 
     <section id="intro">
       <div class="card">
-        <img src="Nuru.png"  width="512" height="512">
+        <img src="Nuru.png">
         <div class="content">
           <small>Where Art finds it's people</small>
           <h1>NURU</h1>
